Correct UserDTO constructor mapping