@@ -1,37 +1,49 @@
 package com.example.agrolink.mapper;
 
+import java.util.List;
+import java.util.stream.Collectors;
+
 import com.example.agrolink.dto.UserDTO;
 import com.example.agrolink.entity.User;
-
-import java.util.List;
 
 public final class UserMapper {
 
     private UserMapper() {
-        throw new UnsupportedOperationException("Utility class");
+
+        throw new UnsupportedOperationException(
+                "Utility class"
+        );
     }
 
     // ================== ENTITY → DTO ==================
 
     public static UserDTO toDTO(User user) {
-        if (user == null) return null;
+
+        if (user == null) {
+            return null;
+        }
 
         return new UserDTO(
                 user.getId(),
                 user.getName(),
                 user.getEmail(),
                 user.getRole(),
-                user.getLocation()
+                user.getLocation(),
+                user.isEnabled()
         );
     }
 
-    // ================== LIST MAPPING ==================
+    // ================== LIST ==================
 
-    public static List<UserDTO> toDTOList(List<User> users) {
-        if (users == null) return List.of();
+    public static List<UserDTO> toDTOList(
+            List<User> users) {
+
+        if (users == null) {
+            return List.of();
+        }
 
         return users.stream()
                 .map(UserMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
